--- a/scenetwo.html
+++ b/scenetwo.html
@@ -260,7 +260,7 @@
     <script>
 
         function redirectToPreviousPage() {
-            window.location.href = "sceneone.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
