--- a/scenetwo.html
+++ b/scenetwo.html
@@ -256,6 +256,12 @@
           window.location.href = "scenethree.html";
       }
   </script>
+    <button class="previous-page-button" onclick="redirectToPreviousPage()">Previous Page</button>
+    <script>
 
+        function redirectToPreviousPage() {
+            window.location.href = "index.html";
+        }
+    </script>
 </body>
 </html>
