--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         position: fixed;
         bottom: 20px;
         right: 20px;
-        background-color: #007bff;
+        background-color: #3e2e1e;
         color: #fff;
         border: none;
         padding: 10px 20px;
