--- a/scenetwo.html
+++ b/scenetwo.html
@@ -36,7 +36,7 @@
         position: fixed;
         bottom: 20px;
         right: 20px;
-        background-color: #007bff;
+        background-color: #3e2e1e;
         color: #fff;
         border: none;
         padding: 10px 20px;
@@ -49,7 +49,7 @@
         position: fixed;
         bottom: 20px;
         left: 20px;
-        background-color: #007bff;
+        background-color: #3e2e1e;
         color: #fff;
         border: none;
         padding: 10px 20px;
